# MoDELib2

./: CMakeLists.txt  Contributors.txt  README.md
include/ClusterDynamics/: ClusterDynamics.h  ClusterDynamicsFEM.h  FixedDirichletSolver.h  SecondOrderReaction.h  SimpleNullSpaceSolver_OLD.h
include/DDvtk/: VTKsegments.h  VTKsegments_OLD.h
include/DefectsFields/: DefectsFieldsExtractor.h
include/DiscreteCrackMechanics/: CrackSystem.h
include/DislocationDynamics/: CrossSlipModels.h  DDtimeStepper.h  DefectiveCrystal.h  DislocationClimbSolverFactory.h  DislocationCrossSlip.h  DislocationDynamicsModule.h  DislocationGlideSolverFactory.h  DislocationJunctionFormation.h  DislocationLoop.h  (+15 more)
python/: modelibPy11.py  modlibUtils.py
src/: CMakeLists.txt
src/ClusterDynamics/: CMakeLists.txt  ClusterDynamics.cpp  ClusterDynamicsFEM.cpp  FixedDirichletSolver_OLD.cpp
src/DDvtk/: CMakeLists.txt  VTKsegments.cpp
src/DefectsFields/: CMakeLists.txt  DefectsFieldsExtractor.cpp
src/DislocationDynamics/: CMakeLists.txt  CrossSlipModels.cpp  DDtimeStepper.cpp  DefectiveCrystal.cpp  DislocationClimbSolverFactory.cpp  DislocationCrossSlip.cpp  DislocationGlideSolverFactory.cpp  DislocationLoop.cpp  DislocationLoopLink.cpp  DislocationLoopNode.cpp  DislocationNetwork.cpp  DislocationNetworkRemesh.cpp  DislocationNode.cpp  DislocationNodeContraction.cpp  DislocationQuadraturePoint.cpp  DislocationSegment.cpp  DislocationVelocitySolverBase.cpp  GalerkinClimbSolver.cpp  GalerkinGlideSolver.cpp  MeshedDislocationLoop.cpp  PyGlideSolver.cpp  SimplexBndNormal.cpp
src/DislocationDynamicsBase/: CMakeLists.txt  ClusterDynamicsBase.cpp  ClusterDynamicsParameters.cpp  ConfigurationFields_OLD.cpp  DislocationDynamicsBase.cpp  DislocationFieldBase.cpp  DislocationLoopPatches.cpp  ElasticDeformationBase.cpp  ElasticDeformationFEM.cpp  EshelbyInclusionBase.cpp  InclusionMicrostructureBase.cpp  MicrostructureBase.cpp  MicrostructureContainer.cpp  PolyhedronInclusion.cpp  SphericalInclusion.cpp  StraightDislocationSegment.cpp  StressStraight.cpp  VoigtTraits.cpp
src/DislocationDynamicsIO/: CMakeLists.txt  DDauxIO.cpp  DDbaseIO.cpp  DDconfigIO.cpp  DDtraitsIO.cpp  DefectiveCrystalParameters.cpp
src/DislocationMicrostructure/: CMakeLists.txt  FrankLoopsDensitySpecification.cpp  FrankLoopsGenerator.cpp  FrankLoopsIndividualSpecification.cpp  MicrostructureGenerator.cpp  MicrostructureGeneratorBase_OLD.cpp  MicrostructureSpecificationBase.cpp  PeriodicDipoleDensitySpecification.cpp  PeriodicDipoleGenerator.cpp  PeriodicDipoleIndividualSpecification.cpp  PeriodicLoopGenerator.cpp  PlanarLoopGenerator.cpp  PlanarLoopIndividualSpecification.cpp  PolyhedronInclusionsGenerator.cpp  PrismaticLoopDensitySpecification.cpp  PrismaticLoopGenerator.cpp  PrismaticLoopIndividualSpecification.cpp  ShearLoopDensitySpecification.cpp  ShearLoopGenerator.cpp  ShearLoopIndividualSpecification.cpp  SphericalInclusionDensitySpecification.cpp  SphericalInclusionIndividualSpecification.cpp  SphericalInclusionsGenerator.cpp  StackingFaultTetrahedraDensitySpecification.cpp  StackingFaultTetrahedraGenerator.cpp  StackingFaultTetrahedraIndividualSpecification.cpp  VTKGenerator.cpp
src/DislocationMobilities/: CMakeLists.txt  DislocationMobilityBCC.cpp  DislocationMobilityBase.cpp  DislocationMobilityFCC.cpp  DislocationMobilityHEXbasal.cpp  DislocationMobilityHEXprismatic.cpp  DislocationMobilityHEXpyramidal.cpp  DislocationMobilityPy.cpp  DislocationMobilitySelector.cpp
src/ElasticDeformation/: CMakeLists.txt  ElasticDeformation.cpp
src/Geometry/: CMakeLists.txt  FiniteLineSegment.cpp  LineLineIntersection.cpp  LineSimplexIntersection.cpp  Plane.cpp  PlaneLineIntersection.cpp  PlanePlaneIntersection.cpp  PlaneSegmentIntersection.cpp  PlanesIntersection.cpp  SegmentSegmentDistance.cpp
src/GlidePlanes/: CMakeLists.txt  GlidePlane.cpp  GlidePlaneBase.cpp  GlidePlaneFactory.cpp  GlidePlaneNoise.cpp  PeriodicGlidePlane.cpp  PeriodicGlidePlaneFactory.cpp
src/InclusionMicrostructure/: CMakeLists.txt  InclusionMicrostructure.cpp
src/Lattices/: CMakeLists.txt  CSL.cpp  DSCL.cpp  LLL.cpp  Lattice.cpp  LatticeDirection.cpp  LatticeGCD.cpp  LatticeLine.cpp  LatticePlane.cpp  LatticePlaneBase_OLD.cpp  LatticeTransitionMatrix.cpp  LatticeVector.cpp  PeriodicLatticeInterpolant.cpp  RLLL.cpp  RationalLatticeDirection.cpp  RationalMatrix.cpp  RationalOrthogonalApproximation.cpp  ReciprocalLatticeDirection.cpp  ReciprocalLatticeVector.cpp
src/Lattices_NEW/: BiCrystal.cpp  LLL.cpp  Lattice.cpp  LatticeCore.cpp  LatticeDirection.cpp  LatticePlane.cpp  LatticePlaneBase.cpp  LatticeVector.cpp  PeriodicLatticeInterpolant.cpp  RLLL.cpp  RationalLatticeDirection.cpp  RationalMatrix.cpp  ReciprocalLatticeDirection.cpp  ReciprocalLatticeVector.cpp
src/Mesh/: BarycentricTraits.cpp  CMakeLists.txt  GmshReader.cpp  MeshBoundarySegment.cpp  MeshLine.cpp  MeshPlane.cpp  MeshRegion.cpp  MeshRegionBoundary.cpp  PlanarMeshFace.cpp  Simplex.cpp  SimplicialMesh.cpp  TriangularMesh.cpp  triangle.cpp
src/PolycrystallineMaterials/: BCClattice.cpp  CMakeLists.txt  FCClattice.cpp  GammaSurface.cpp  Grain.cpp  GrainBoundary.cpp  HEXlattice.cpp  HEXlattice_OLD.cpp  Polycrystal.cpp  PolycrystallineMaterialBase.cpp  SecondPhase.cpp  SingleCrystalBase.cpp  SlipSystem.cpp
src/vtk/: CMakeLists.txt  ChartActor.cpp  DDFieldWidget.cpp  DDFieldWidget_OLD.cpp  DefectiveCrystalActor.cpp  NetworkLinkActor.cpp  NetworkLoopActor.cpp  SimplicialMeshActor.cpp
tools/: CMakeLists.txt
tools/DDomp/: CMakeLists.txt  DDomp.cpp
tools/DDqt/: CMakeLists.txt  DDqt.cxx
tools/DDqt/include/: ChartActor.h  DDFieldWidget.h  GlidePlaneActor.h  InclusionActor.h  NetworkLinkActor.h  NetworkLoopActor.h
tools/DDqt/src/: CMakeLists.txt  ChartActor.cpp  DDFieldWidget.cpp  DDqtVTKwidget.cpp  DefectiveCrystalActor.cpp  GlidePlaneActor.cpp  InclusionActor.cpp  NetworkLoopActor.cpp  QuadratureActor.cpp
tools/DefectsFields/: CMakeLists.txt  defectsFields.py
tools/MicrostructureGenerator/: CMakeLists.txt  microstructureGenerator.cpp
tools/pyMoDELib/: CMakeLists.txt  pyMoDELib.cxx
(+417 files in other folders)
