add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Geometry Geometry)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Lattices Lattices)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Mesh Mesh)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GlidePlanes GlidePlanes)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DislocationMobilities DDDmobilities)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DislocationDynamicsIO DDDIO)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DislocationDynamicsBase DDDbase)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/PolycrystallineMaterials PolyMaterials)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DislocationMicrostructure Microstructure)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ClusterDynamics ClusterDynamics)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ElasticDeformation ElasticDeformation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DislocationDynamics DislocationDynamics)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/InclusionMicrostructure Inclusions)
